--- a/java/src/category/view/CategoryView.fxml
+++ b/java/src/category/view/CategoryView.fxml
@@ -7,13 +7,14 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane fx:id="primaryPane" prefHeight="480.0" prefWidth="640.0" style="-fx-font-family: Roboto-Regular;" stylesheets="@CategoryView.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="category.view.CategoryViewGraphical">
     <children>
-        <AnchorPane fx:id="loginPane" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: -dcolor;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-            <children>
-                <VBox fx:id="loginInnerPane" alignment="CENTER" layoutX="270.0" layoutY="95.0" prefHeight="305.0" prefWidth="240.0" style="-fx-background-color: -pcolor; -fx-background-radius: 4px;" AnchorPane.bottomAnchor="95.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="95.0">
+      <StackPane fx:id="loginPane" prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: -dcolor;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+                <VBox fx:id="loginInnerPane" alignment="CENTER" maxHeight="305.0" maxWidth="240.0" prefHeight="305.0" prefWidth="240.0" style="-fx-background-color: -pcolor; -fx-background-radius: 4px;">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
@@ -30,11 +31,11 @@
                         </ImageView>
                      </children>
                   </AnchorPane>
-                  <Label style="-fx-font: 16px &quot;Roboto Bold&quot;; -fx-text-fill: -dcolor;" text="EPR" textFill="#2a2a2a">
+                  <Label style="-fx-font: 16px &quot;Roboto Bold&quot;;" text="EPR" textFill="WHITE">
                      <VBox.margin>
                         <Insets top="8.0" />
                      </VBox.margin></Label>
-                  <Label style="-fx-font-size: 14px; -fx-text-fill: -dcolor;" text="Encrypted Password Repository" textFill="#2a2a2a" />
+                  <Label style="-fx-font-size: 14px;" text="Encrypted Password Repository" textFill="WHITE" />
                   <JFXPasswordField fx:id="loginPasswordField" maxWidth="190.0" onAction="#login" promptText="Senha mestra" styleClass="textfield-dark">
                      <VBox.margin>
                         <Insets bottom="20.0" top="35.0" />
@@ -46,7 +47,7 @@
                      </VBox.margin>
                   </JFXButton>
                </children></VBox>
-            </children>
-        </AnchorPane>
+         </children>
+      </StackPane>
     </children>
 </AnchorPane>
